--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+     <linkv rel="stylesheet" href="./style.css" type="text/css">
     <title>About Me</title>
   </head>
   <header>
